--- a/partials/options.html
+++ b/partials/options.html
@@ -1,12 +1,21 @@
 <div class="editor-row">
   <div class="section gf-form-group">
     <h5 class="section-heading">Options</h5>
+
     <div class="gf-form">
       <label class="gf-form-label width-9">Max data points</label>
       <span class="max-width-10">
         <input type="number" class="gf-form-input" ng-model="ctrl.panel.maxDataPoints" ng-change="ctrl.refresh()"/>
       </span>
     </div>
+
+    <div class="gf-form">
+      <label class="gf-form-label width-16">Max data point time delta <info-popover>In seconds, 0 to disable. Start a new track if the time difference between a data point and previous data point is greater than the value.</info-popover></label>
+      <span class="max-width-10">
+        <input type="number" class="gf-form-input" ng-model="ctrl.panel.maxDataPointDelta" ng-change="ctrl.refreshPolylines()"/>
+      </span>
+    </div>
+
     <gf-form-switch class="gf-form" label="Autozoom" label-class="width-11" tooltip="Automatically zoom the map to fit the data?"
                     checked="ctrl.panel.autoZoom" on-change="ctrl.zoomToFit()"/>
     <gf-form-switch class="gf-form" label="Zoom with scroll wheel" label-class="width-11"
