--- a/partials/options.html
+++ b/partials/options.html
@@ -10,7 +10,7 @@
     </div>
 
     <div class="gf-form">
-      <label class="gf-form-label width-16">Max data point time delta <info-popover>In seconds, 0 to disable. Start a new track if the time difference between a data point and previous data point is greater than the value.</info-popover></label>
+      <label class="gf-form-label width-16">Max data point time delta <info-popover>In minutes, 0 to disable. Start a new track if the time difference between a data point and previous data point is greater than the value.</info-popover></label>
       <span class="max-width-10">
         <input type="number" class="gf-form-input" ng-model="ctrl.panel.maxDataPointDelta" ng-change="ctrl.refreshPolylines()"/>
       </span>
